add lodash test

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "chart.js": "^4.5.0",
     "izitoast": "^1.4.0",
+    "lodash": "^4.17.21",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
