vite config update

--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "clean": "gh-pages-clean"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "gh-pages": "^6.3.0",
     "glob": "^11.0.3",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^7.0.0",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2"
   },
   "author": "Stanislav Nemchenko <stas.buka@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "chart.js": "^4.5.0",
     "izitoast": "^1.4.0",
-    "lodash": "^4.17.21",
-    "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-html-inject": "^1.1.2"
+    "lodash": "^4.17.21"
   }
 }
